demos/0030-xops-conference/manolo-agentgateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: tools-server-v2-agentgateway
  namespace: kagent
spec:
  gatewayClassName: agentgateway
  listeners:
  - protocol: HTTP
    port: 8084
    name: http
    allowedRoutes:
      namespaces:
        from: All
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: tools-server-v2
  namespace: kagent
spec:
  parentRefs:
  - name: tools-server-v2-agentgateway
    namespace: kagent
  rules:
    - backendRefs:
      - name: tools-server-v2
        group: gateway.kgateway.dev
        kind: Backend
